<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dian.fm.hongdian_android_live_sdk_demo.AudioActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/roomID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/roomIDEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="123"
            />
        <TextView
            android:text="@string/selfID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/selfIDEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/userID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/userIDEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/audioRecordStart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/startRecordAudio"

                />
            <Button
                android:id="@+id/audioRecordStop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/stopRecordAudio"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/audioPlayStart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/startPlayAudio"

                />
            <Button
                android:id="@+id/audioPlayStop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/stopPlayAudio"

                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
