<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dian.fm.hongdian_android_live_sdk_demo.VideoActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/roomID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/roomIDEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="123"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >

            <TextView
                android:text="@string/selfID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="3"
                />
            <TextView
                android:text="@string/userID"
                android:layout_marginLeft="20dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >

            <EditText
                android:id="@+id/selfIDEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                />

            <EditText
                android:id="@+id/userIDEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >

            <Button
                android:id="@+id/videoRecordStart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dip"
                android:onClick="onClickButton"
                android:text="@string/startRecordVideo"

                />
            <Button
                android:id="@+id/videoRecordStop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/stopRecordVideo"

                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/localView"
            >

            <SurfaceView
                android:id="@+id/preview"
                android:layout_width="0px"
                android:layout_height="0px" />

            <LinearLayout
                android:id="@+id/toolLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/changeCamera"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dip"
                    android:onClick="onClickButton"
                    android:text="@string/changeCamera"

                    />
                <Button
                    android:id="@+id/flash"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:onClick="onClickButton"
                    android:text="@string/flash"

                    />
            </LinearLayout>
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/netView"
            >
            <LinearLayout
                android:id="@+id/startPlayLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                >
                <Button
                    android:id="@+id/videoPlayStart"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dip"
                    android:onClick="onClickButton"
                    android:text="@string/startPlayVideo"

                    />
                <Button
                    android:id="@+id/videoPlayStop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:onClick="onClickButton"
                    android:text="@string/stopPlayVideo"

                    />
            </LinearLayout>
        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
